--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: 16.x
 
-      #- name: Install dependencies
-      #  run: npm install
+      - name: Install dependencies
+        run: npm install --only=prod
 
       - name: Start application
         run: npm run start
