--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -31,6 +31,6 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
 
-      - name: Deploy to GCP
-        run: |
-          gcloud app deploy --version=${GITHUB_SHA::8}
+      # - name: Deploy to GCP
+      #   run: |
+      #     gcloud app deploy --version=${GITHUB_SHA::8}
