--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -51,7 +51,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}  # GCP VM's IP or hostname
-          username: ${{ secrets.SSH_USERNAME }}  # SSH username (e.g., ubuntu)
+          username: ${{ secrets.USERNAME }}  # SSH username (e.g., ubuntu)
           key: ${{ secrets.ERP_PUPUK_STAGING }}  # Private key from secret
           script: |
             cd /home/huda23aduh/custom-idurar-erp-crm
