--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 100,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "singleQuote": true
 }
