--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "production": "NODE_ENV=production",
     "setup": "node ./setup/setup.js",
     "reset": "node ./setup/reset.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix && npm run format",
+    "format": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -35,9 +38,18 @@
     "resend": "^0.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "nodemon": "^1.19.2"
+    "lint-staged": "^14.0.1",
+    "nodemon": "^1.19.2",
+    "prettier": "^3.0.2"
   },
   "_moduleAliases": {
     "@": "."
@@ -46,6 +58,18 @@
   "main": "app.js",
   "keywords": [],
   "author": "Salah Eddine Lalami",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
