--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "helmet": "^4.6.0",
     "html-pdf": "^3.0.1",
     "i18n": "^0.15.1",
+    "joi": "^17.9.2",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
