--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "framer-motion": "4.1.13",
     "history": "4.10.1",
     "hoist-non-react-statics": "3.3.2",
+    "i18next": "^23.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "3.1.3",
     "react-helmet": "6.1.0",
+    "react-i18next": "^13.2.0",
     "react-portal": "4.2.1",
     "react-redux": "7.2.8",
     "react-router-dom": "5.2.0",
