fix: change bill model, change function name formatNumberToNDigits

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
     "moment": "^2.26.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.3.3",
     "mongoose-autopopulate": "^0.14.0",
     "mongoose-sequence": "^5.2.2",
