--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "eslint-loader": "^4.0.2",
     "identity-obj-proxy": "3.0.0",
     "prettier": "2.5.1",
+    "react-error-overlay": "^6.0.9",
     "redux-mock-store": "1.5.4"
   }
 }
